class name changeed

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
 		.portfolio,
 		.academics_n_career,
-		.services,
+		.workshops,
 		.course_n_cert,
 		.contact {
 			padding: 50px 20px;
@@ -68,7 +68,7 @@
 
 		.portfolio h2,
 		.academics_n_career h2,
-		.services h2,
+		.workshops h2,
 		.course_n_cert h2,
 		.contact h2 {
 			font-size: 2em;
@@ -78,7 +78,7 @@
 		.portfolio .categories,
 		.portfolio .items,
 		.academics_n_career .content,
-		.services .content,
+		.workshops .content,
 		.course_n_cert .content,
 		.contact .content {
 			display: flex;
@@ -87,7 +87,7 @@
 		}
 
 		.portfolio .categories a,
-		.services .content .service,
+		.workshops .content .workshop,
 		.course_n_cert .content .post,
 		.contact .content .form,
 		.contact .content .details {
@@ -102,7 +102,7 @@
 
 		.portfolio .items .item,
 		.academics_n_career .content .section,
-		.services .content .service,
+		.workshops .content .workshop,
 		.course_n_cert .content .post {
 			background-color: #444;
 			margin: 10px;
@@ -120,7 +120,7 @@
 
 		.portfolio .items .item h3,
 		.academics_n_career .content .section h3,
-		.services .content .service h3,
+		.workshops .content .workshop h3,
 		.course_n_cert .content .post h3 {
 			font-size: 1.5em;
 			margin: 10px 0;
@@ -128,7 +128,7 @@
 
 		.portfolio .items .item p,
 		.academics_n_career .content .section p,
-		.services .content .service p,
+		.workshops .content .workshop p,
 		.course_n_cert .content .post p {
 			font-size: 1em;
 			color: #aaa;
@@ -490,14 +490,14 @@
 				</div>
 				<div class="item">
 					<img alt="Bangla handwritten dataset" height="300"
-						src="https://github.com/cybercat37794/imranahmed/blob/master/Reports%20&%20Publication%20Graphics/Internet%20Service%20report%20img.png?raw=true"
+						src="https://github.com/cybercat37794/imranahmed/blob/master/Reports%20&%20Publication%20Graphics/Internet%20workshop%20report%20img.png?raw=true"
 						width="300" />
 					<h3>
-						Academic Report: Less Skilled People in Internet Service Providing in Bangladesh
+						Academic Report: Less Skilled People in Internet workshop Providing in Bangladesh
 					</h3>
 					<p>
 						The purpose of this report is to present a solution to remove the internet connectivity problem
-						in broadband internet in Bangladesh. To solve this problem, internet service provider (ISP)
+						in broadband internet in Bangladesh. To solve this problem, internet workshop provider (ISP)
 						should open their training programs for their employees. Some government organizations can also
 						take some initiative to remove this problem. A survey has been conducted to collect users'
 						opinions from broadband internet users. After analyzing the collected data, it is found that
@@ -746,12 +746,12 @@
 			</div>
 		</div>
 	</section>
-	<section class="services">
+	<section class="workshops">
 		<h2>
 			New WORKSHOPS
 		</h2>
 		<div class="content">
-			<div class="service">
+			<div class="workshop">
 				<h3>
 					Technical Workshop - Unlocking the Power of Recommender Systems by: Bahareh Rahmatikargar
 				</h3>
@@ -762,13 +762,31 @@
 					traditional models to the latest advancements. We discussed their strengths and limitations, the
 					data they use, and how to measure their performance.
 				</p>
-				<a href="#">
+				<a
+					href="https://www.uwindsor.ca/science/computerscience/304056/technical-workshop-series-unlocking-power-recommender-systems-hands-journey-python-2nd">
 					Learn More
 				</a>
 			</div>
-			<div class="service">
+			<div class="workshop">
 				<h3>
-					Search Engine Optimization
+					Technical Workshop - Advanced Topics in Data Clustering by Ali Abbasi Tadi
+				</h3>
+				<p>
+					Clustering is a way of grouping data points into different clusters consisting of similar data
+					points. The objects with possible similarities remain in a group that has less or no similarities
+					with another group. In this workshop, we explore advanced topics in data clustering for high
+					dimensions. We will define the curse of dimensionality and dimensionality reduction methods like
+					t-SNE, PCA, and Isomap, as well as their implementations. We will explore the consensus matrix and
+					how to adjust the best clustering parameters.
+				</p>
+				<a
+					href="https://www.uwindsor.ca/science/computerscience/248659/technical-workshop-series-advanced-topics-data-clustering-ali-abbasi-tadi">
+					Learn More
+				</a>
+			</div>
+			<div class="workshop">
+				<h3>
+					Video Editing
 				</h3>
 				<p>
 					Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live
@@ -778,7 +796,127 @@
 					Learn More
 				</a>
 			</div>
-			<div class="service">
+			<div class="workshop">
+				<h3>
+					Video Editing
+				</h3>
+				<p>
+					Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live
+					the blind texts.
+				</p>
+				<a href="#">
+					Learn More
+				</a>
+			</div>
+			<div class="workshop">
+				<h3>
+					Video Editing
+				</h3>
+				<p>
+					Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live
+					the blind texts.
+				</p>
+				<a href="#">
+					Learn More
+				</a>
+			</div>
+			<div class="workshop">
+				<h3>
+					Video Editing
+				</h3>
+				<p>
+					Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live
+					the blind texts.
+				</p>
+				<a href="#">
+					Learn More
+				</a>
+			</div>
+			<div class="workshop">
+				<h3>
+					Video Editing
+				</h3>
+				<p>
+					Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live
+					the blind texts.
+				</p>
+				<a href="#">
+					Learn More
+				</a>
+			</div>
+			<div class="workshop">
+				<h3>
+					Video Editing
+				</h3>
+				<p>
+					Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live
+					the blind texts.
+				</p>
+				<a href="#">
+					Learn More
+				</a>
+			</div>
+			<div class="workshop">
+				<h3>
+					Video Editing
+				</h3>
+				<p>
+					Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live
+					the blind texts.
+				</p>
+				<a href="#">
+					Learn More
+				</a>
+			</div>
+			<div class="workshop">
+				<h3>
+					Video Editing
+				</h3>
+				<p>
+					Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live
+					the blind texts.
+				</p>
+				<a href="#">
+					Learn More
+				</a>
+			</div>
+			<div class="workshop">
+				<h3>
+					Video Editing
+				</h3>
+				<p>
+					Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live
+					the blind texts.
+				</p>
+				<a href="#">
+					Learn More
+				</a>
+			</div>
+			<div class="workshop">
+				<h3>
+					Video Editing
+				</h3>
+				<p>
+					Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live
+					the blind texts.
+				</p>
+				<a href="#">
+					Learn More
+				</a>
+			</div>
+			<div class="workshop">
+				<h3>
+					Video Editing
+				</h3>
+				<p>
+					Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live
+					the blind texts.
+				</p>
+				<a href="#">
+					Learn More
+				</a>
+			</div>
+			<div class="workshop">
 				<h3>
 					Video Editing
 				</h3>
@@ -908,12 +1046,12 @@
 			</div>
 		</div>
 	</section>
-	<section class="services">
+	<section class="workshops">
 		<h2>
-			My Services
+			My workshops
 		</h2>
 		<div class="content">
-			<div class="service">
+			<div class="workshop">
 				<h3>
 					Web Design
 				</h3>
@@ -925,7 +1063,7 @@
 					Learn More
 				</a>
 			</div>
-			<div class="service">
+			<div class="workshop">
 				<h3>
 					Search Engine Optimization
 				</h3>
@@ -937,7 +1075,7 @@
 					Learn More
 				</a>
 			</div>
-			<div class="service">
+			<div class="workshop">
 				<h3>
 					Video Editing
 				</h3>
