class name previous

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
 		.portfolio,
 		.academics_n_career,
-		.workshops,
+		.services,
 		.course_n_cert,
 		.contact {
 			padding: 50px 20px;
@@ -68,7 +68,7 @@
 
 		.portfolio h2,
 		.academics_n_career h2,
-		.workshops h2,
+		.services h2,
 		.course_n_cert h2,
 		.contact h2 {
 			font-size: 2em;
@@ -78,7 +78,7 @@
 		.portfolio .categories,
 		.portfolio .items,
 		.academics_n_career .content,
-		.workshops .content,
+		.services .content,
 		.course_n_cert .content,
 		.contact .content {
 			display: flex;
@@ -87,7 +87,7 @@
 		}
 
 		.portfolio .categories a,
-		.workshops .content .workshop,
+		.services .content .service,
 		.course_n_cert .content .post,
 		.contact .content .form,
 		.contact .content .details {
@@ -102,7 +102,7 @@
 
 		.portfolio .items .item,
 		.academics_n_career .content .section,
-		.workshops .content .workshop,
+		.services .content .service,
 		.course_n_cert .content .post {
 			background-color: #444;
 			margin: 10px;
@@ -120,7 +120,7 @@
 
 		.portfolio .items .item h3,
 		.academics_n_career .content .section h3,
-		.workshops .content .workshop h3,
+		.services .content .service h3,
 		.course_n_cert .content .post h3 {
 			font-size: 1.5em;
 			margin: 10px 0;
@@ -128,7 +128,7 @@
 
 		.portfolio .items .item p,
 		.academics_n_career .content .section p,
-		.workshops .content .workshop p,
+		.services .content .service p,
 		.course_n_cert .content .post p {
 			font-size: 1em;
 			color: #aaa;
@@ -490,14 +490,14 @@
 				</div>
 				<div class="item">
 					<img alt="Bangla handwritten dataset" height="300"
-						src="https://github.com/cybercat37794/imranahmed/blob/master/Reports%20&%20Publication%20Graphics/Internet%20workshop%20report%20img.png?raw=true"
+						src="https://github.com/cybercat37794/imranahmed/blob/master/Reports%20&%20Publication%20Graphics/Internet%20Service%20report%20img.png?raw=true"
 						width="300" />
 					<h3>
-						Academic Report: Less Skilled People in Internet workshop Providing in Bangladesh
+						Academic Report: Less Skilled People in Internet Service Providing in Bangladesh
 					</h3>
 					<p>
 						The purpose of this report is to present a solution to remove the internet connectivity problem
-						in broadband internet in Bangladesh. To solve this problem, internet workshop provider (ISP)
+						in broadband internet in Bangladesh. To solve this problem, internet service provider (ISP)
 						should open their training programs for their employees. Some government organizations can also
 						take some initiative to remove this problem. A survey has been conducted to collect users'
 						opinions from broadband internet users. After analyzing the collected data, it is found that
@@ -746,12 +746,12 @@
 			</div>
 		</div>
 	</section>
-	<section class="workshops">
+	<section class="services">
 		<h2>
 			New WORKSHOPS
 		</h2>
 		<div class="content">
-			<div class="workshop">
+			<div class="service">
 				<h3>
 					Technical Workshop - Unlocking the Power of Recommender Systems by: Bahareh Rahmatikargar
 				</h3>
@@ -767,7 +767,7 @@
 					Learn More
 				</a>
 			</div>
-			<div class="workshop">
+			<div class="service">
 				<h3>
 					Technical Workshop - Advanced Topics in Data Clustering by Ali Abbasi Tadi
 				</h3>
@@ -784,7 +784,7 @@
 					Learn More
 				</a>
 			</div>
-			<div class="workshop">
+			<div class="service">
 				<h3>
 					Video Editing
 				</h3>
@@ -796,7 +796,7 @@
 					Learn More
 				</a>
 			</div>
-			<div class="workshop">
+			<div class="service">
 				<h3>
 					Video Editing
 				</h3>
@@ -808,7 +808,7 @@
 					Learn More
 				</a>
 			</div>
-			<div class="workshop">
+			<div class="service">
 				<h3>
 					Video Editing
 				</h3>
@@ -820,7 +820,7 @@
 					Learn More
 				</a>
 			</div>
-			<div class="workshop">
+			<div class="service">
 				<h3>
 					Video Editing
 				</h3>
@@ -832,7 +832,7 @@
 					Learn More
 				</a>
 			</div>
-			<div class="workshop">
+			<div class="service">
 				<h3>
 					Video Editing
 				</h3>
@@ -844,7 +844,7 @@
 					Learn More
 				</a>
 			</div>
-			<div class="workshop">
+			<div class="service">
 				<h3>
 					Video Editing
 				</h3>
@@ -856,7 +856,7 @@
 					Learn More
 				</a>
 			</div>
-			<div class="workshop">
+			<div class="service">
 				<h3>
 					Video Editing
 				</h3>
@@ -868,7 +868,7 @@
 					Learn More
 				</a>
 			</div>
-			<div class="workshop">
+			<div class="service">
 				<h3>
 					Video Editing
 				</h3>
@@ -880,7 +880,7 @@
 					Learn More
 				</a>
 			</div>
-			<div class="workshop">
+			<div class="service">
 				<h3>
 					Video Editing
 				</h3>
@@ -892,7 +892,7 @@
 					Learn More
 				</a>
 			</div>
-			<div class="workshop">
+			<div class="service">
 				<h3>
 					Video Editing
 				</h3>
@@ -904,7 +904,7 @@
 					Learn More
 				</a>
 			</div>
-			<div class="workshop">
+			<div class="service">
 				<h3>
 					Video Editing
 				</h3>
@@ -916,7 +916,7 @@
 					Learn More
 				</a>
 			</div>
-			<div class="workshop">
+			<div class="service">
 				<h3>
 					Video Editing
 				</h3>
@@ -1046,12 +1046,12 @@
 			</div>
 		</div>
 	</section>
-	<section class="workshops">
+	<section class="services">
 		<h2>
-			My workshops
+			My Services
 		</h2>
 		<div class="content">
-			<div class="workshop">
+			<div class="service">
 				<h3>
 					Web Design
 				</h3>
@@ -1063,7 +1063,7 @@
 					Learn More
 				</a>
 			</div>
-			<div class="workshop">
+			<div class="service">
 				<h3>
 					Search Engine Optimization
 				</h3>
@@ -1075,7 +1075,7 @@
 					Learn More
 				</a>
 			</div>
-			<div class="workshop">
+			<div class="service">
 				<h3>
 					Video Editing
 				</h3>
