--- a/index.html
+++ b/index.html
@@ -748,7 +748,7 @@
 	</section>
 	<section class="services">
 		<h2>
-			New WORKSHOPS
+			WORKSHOPS
 		</h2>
 		<div class="content">
 			<div class="service">
@@ -786,37 +786,54 @@
 			</div>
 			<div class="service">
 				<h3>
-					Video Editing
+					Technical Workshop - Basic Topics on Cloud Computing for IoT by Atefeh Gilvari
 				</h3>
 				<p>
-					Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live
-					the blind texts.
+
+					This workshop explores the integration of Cloud Computing with the Internet of Things (IoT),
+					detailing how data from loT devices is managed, analyzed, and utilized for decision-making through
+					platforms like AWS. It highlights the architecture of AWS for loT, including device connectivity,
+					security, and the practical applications of cloud technologies in enhancing efficiency and
+					reliability in IoT ecosystems.
 				</p>
-				<a href="#">
+				<a
+					href="https://www.uwindsor.ca/science/computerscience/328114/technical-workshop-basic-topics-cloud-computing-iot-1st-offering-atefeh-gilvari">
 					Learn More
 				</a>
 			</div>
 			<div class="service">
 				<h3>
-					Video Editing
+					Technical Workshop - Foundations of Q-Learning by Xiaofeng (Michael) Liu
 				</h3>
 				<p>
-					Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live
-					the blind texts.
+
+					Reinforcement learning (RL) is training machine learning models to make a sequence of decisions.
+					Q-learning is a type of RL with a model-free environment which achieves learning by interaction with
+					the environment instead of transition probabilities. This workshop will introduce the principle of
+					Q-learning.
 				</p>
-				<a href="#">
+				<a
+					href="https://www.uwindsor.ca/science/computerscience/326549/technical-workshop-foundations-q-learning-1st-offering-xiaofeng-michael-liu">
 					Learn More
 				</a>
 			</div>
 			<div class="service">
 				<h3>
-					Video Editing
+					Technical Workshop - Unveiling the Potential of Deep Reinforcement Learning (DRL): Methods and
+					Applications (1st) by Nahid Abdolrahmanpour
+
 				</h3>
 				<p>
-					Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live
-					the blind texts.
+
+					Deep Reinforcement Learning (DRL) has become a groundbreaking paradigm in artificial intelligence,
+					exhibiting the potential to solve complex decision-making tasks. This workshop aims to provide
+					participants with a complete understanding of the methods and applications of DRL, highlighting its
+					significance in various domains, including robotics, gaming, and autonomous systems. Additionally,
+					the workshop will delve into recent advancements and prospects, empowering participants to unlock
+					the full capabilities of DRL and its transformative impact on the technological landscape.
 				</p>
-				<a href="#">
+				<a
+					href="https://www.uwindsor.ca/science/computerscience/331062/unveiling-potential-deep-reinforcement-learning-drl-methods-and-applications-1st-offering">
 					Learn More
 				</a>
 			</div>
