new workshops commit

--- a/index.html
+++ b/index.html
@@ -789,7 +789,6 @@
 					Technical Workshop - Basic Topics on Cloud Computing for IoT by Atefeh Gilvari
 				</h3>
 				<p>
-
 					This workshop explores the integration of Cloud Computing with the Internet of Things (IoT),
 					detailing how data from loT devices is managed, analyzed, and utilized for decision-making through
 					platforms like AWS. It highlights the architecture of AWS for loT, including device connectivity,
@@ -806,7 +805,6 @@
 					Technical Workshop - Foundations of Q-Learning by Xiaofeng (Michael) Liu
 				</h3>
 				<p>
-
 					Reinforcement learning (RL) is training machine learning models to make a sequence of decisions.
 					Q-learning is a type of RL with a model-free environment which achieves learning by interaction with
 					the environment instead of transition probabilities. This workshop will introduce the principle of
@@ -824,7 +822,6 @@
 
 				</h3>
 				<p>
-
 					Deep Reinforcement Learning (DRL) has become a groundbreaking paradigm in artificial intelligence,
 					exhibiting the potential to solve complex decision-making tasks. This workshop aims to provide
 					participants with a complete understanding of the methods and applications of DRL, highlighting its
@@ -839,37 +836,52 @@
 			</div>
 			<div class="service">
 				<h3>
-					Video Editing
+					Technical Workshop - Azure Machine Learning (2nd Offering) by Mahshad Hashemi
 				</h3>
 				<p>
-					Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live
-					the blind texts.
+
+					In this workshop, participants will delve into the basics of Azure Machine Learning, exploring its
+					comprehensive ecosystem and the role it plays in the Al and ML landscape. We will cover essential
+					components, the machine learning workflow, and the tools available for efficient model development.
 				</p>
-				<a href="#">
+				<a
+					href="https://www.uwindsor.ca/science/computerscience/332885/technical-workshop-azure-machine-learning-2nd-offering-mahshad-hashemi">
 					Learn More
 				</a>
 			</div>
 			<div class="service">
 				<h3>
-					Video Editing
+					Cultural Workshop - Iran: A Journey Through Culture and Tradition (2nd Offering) by: Nasrin
+					Tavakoli, and Atefeh Gilvari
 				</h3>
 				<p>
-					Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live
-					the blind texts.
+
+					Embark on a journey through the vibrant cultural tapestry of Iran! This interactive workshop invites
+					you to delve into the heart of Iran's traditions, spanning its music, dance, and the rich diversity
+					of its ethnic communities. From the soul-stirring melodies of Persian classical music to the
+					high-energy folk dances of regions across the country, you'll experience the profound beauty and
+					variety of each cultural expression. We'll uncover Iran's colourful history, artistic heritage, and
+					the unique contributions of its many ethnic groups-from the Persian and Azeri to the Kurdish and
+					Baluchi-each adding a distinct flavour to Iran's cultural mosaic.
 				</p>
-				<a href="#">
+				<a
+					href="https://www.uwindsor.ca/science/computerscience/333457/technical-workshop-iran-journey-through-culture-and-tradition-2nd-offering-nasrin-tavakoli">
 					Learn More
 				</a>
 			</div>
 			<div class="service">
 				<h3>
-					Video Editing
+					Technical Workshop - Intro to NLP (2nd Offering) by Soroush
 				</h3>
 				<p>
-					Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live
-					the blind texts.
+
+					Natural Language Processing (NLP) is a rapidly growing field of Artificial Intelligence that focuses
+					on enabling machines to understand, interpret, and generate human language. This introductory
+					workshop will cover the basics of NLP, its applications, and popular techniques, including text
+					classification, sentiment analysis, named entity recognition, and machine translation.
 				</p>
-				<a href="#">
+				<a
+					href="https://www.uwindsor.ca/science/computerscience/326072/technical-workshop-introduction-natural-language-processing-nlp-2nd-offering-soroush">
 					Learn More
 				</a>
 			</div>
