--- a/index.html
+++ b/index.html
@@ -851,6 +851,22 @@
 			</div>
 			<div class="service">
 				<h3>
+					Technical Workshop - Intro to NLP (2nd Offering) by Soroush
+				</h3>
+				<p>
+
+					Natural Language Processing (NLP) is a rapidly growing field of Artificial Intelligence that focuses
+					on enabling machines to understand, interpret, and generate human language. This introductory
+					workshop will cover the basics of NLP, its applications, and popular techniques, including text
+					classification, sentiment analysis, named entity recognition, and machine translation.
+				</p>
+				<a
+					href="https://www.uwindsor.ca/science/computerscience/326072/technical-workshop-introduction-natural-language-processing-nlp-2nd-offering-soroush">
+					Learn More
+				</a>
+			</div>
+			<div class="service">
+				<h3>
 					Cultural Workshop - Iran: A Journey Through Culture and Tradition (2nd Offering) by: Nasrin
 					Tavakoli, and Atefeh Gilvari
 				</h3>
@@ -871,39 +887,30 @@
 			</div>
 			<div class="service">
 				<h3>
-					Technical Workshop - Intro to NLP (2nd Offering) by Soroush
+					MSc Thesis Defense: HyCAN: A Hybrid Approach for CAN Bus Intrusion Detection using performance
+					analysis of Machine Learning Techniques.
 				</h3>
 				<p>
-
-					Natural Language Processing (NLP) is a rapidly growing field of Artificial Intelligence that focuses
-					on enabling machines to understand, interpret, and generate human language. This introductory
-					workshop will cover the basics of NLP, its applications, and popular techniques, including text
-					classification, sentiment analysis, named entity recognition, and machine translation.
+					Electronic Control Units (ECUs) have become important to modern vehicles, enhancing operational
+					control, driving comfort, and safety. These ECUs communicate using the Controller Area Network (CAN)
+					protocol, which despite its widespread adoption, is vulnerable to various security threats.
+					Therefore making CAN protocol more secure is crucial, intrusion detection systems (IDS) offer a
+					viable path to mitigating cyberattacks on vehicles. This research proposes a Hybrid Framework for
+					performance analysis of Machine Learning-based IDS employing a range of models, including K-Nearest
+					Neighbor (KNN), Logistic Regression, Decision Tree (DT), Random Forest, XGBoost, CatBoost,
+					Multi-Layer Perceptron (MLP), Long Short-Term Memory (LSTM), and Bidirectional Encoder
+					Representations from Transformers (BERT).
 				</p>
-				<a
-					href="https://www.uwindsor.ca/science/computerscience/326072/technical-workshop-introduction-natural-language-processing-nlp-2nd-offering-soroush">
+				<a href="https://scholar.uwindsor.ca/etd/9382/">
 					Learn More
 				</a>
 			</div>
 			<div class="service">
 				<h3>
-					Video Editing
+					PhD Defense: Federated Learning: Taxonomy, Challenges, Future Directions, and a Brief Insight into
+					Graph Neural Networks for Decentralized Collaboration
 				</h3>
 				<p>
-					Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live
-					the blind texts.
-				</p>
-				<a href="#">
-					Learn More
-				</a>
-			</div>
-			<div class="service">
-				<h3>
-					Video Editing
-				</h3>
-				<p>
-					Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live
-					the blind texts.
 				</p>
 				<a href="#">
 					Learn More
