all workshops commited

--- a/index.html
+++ b/index.html
@@ -839,7 +839,6 @@
 					Technical Workshop - Azure Machine Learning (2nd Offering) by Mahshad Hashemi
 				</h3>
 				<p>
-
 					In this workshop, participants will delve into the basics of Azure Machine Learning, exploring its
 					comprehensive ecosystem and the role it plays in the Al and ML landscape. We will cover essential
 					components, the machine learning workflow, and the tools available for efficient model development.
@@ -854,7 +853,6 @@
 					Technical Workshop - Intro to NLP (2nd Offering) by Soroush
 				</h3>
 				<p>
-
 					Natural Language Processing (NLP) is a rapidly growing field of Artificial Intelligence that focuses
 					on enabling machines to understand, interpret, and generate human language. This introductory
 					workshop will cover the basics of NLP, its applications, and popular techniques, including text
@@ -871,7 +869,6 @@
 					Tavakoli, and Atefeh Gilvari
 				</h3>
 				<p>
-
 					Embark on a journey through the vibrant cultural tapestry of Iran! This interactive workshop invites
 					you to delve into the heart of Iran's traditions, spanning its music, dance, and the rich diversity
 					of its ethnic communities. From the soul-stirring melodies of Persian classical music to the
@@ -911,54 +908,11 @@
 					Graph Neural Networks for Decentralized Collaboration
 				</h3>
 				<p>
-				</p>
-				<a href="#">
-					Learn More
-				</a>
-			</div>
-			<div class="service">
-				<h3>
-					Video Editing
-				</h3>
-				<p>
-					Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live
-					the blind texts.
-				</p>
-				<a href="#">
-					Learn More
-				</a>
-			</div>
-			<div class="service">
-				<h3>
-					Video Editing
-				</h3>
-				<p>
-					Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live
-					the blind texts.
-				</p>
-				<a href="#">
-					Learn More
-				</a>
-			</div>
-			<div class="service">
-				<h3>
-					Video Editing
-				</h3>
-				<p>
-					Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live
-					the blind texts.
-				</p>
-				<a href="#">
-					Learn More
-				</a>
-			</div>
-			<div class="service">
-				<h3>
-					Video Editing
-				</h3>
-				<p>
-					Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live
-					the blind texts.
+					Deep Learning is one of the most revolutionary concepts in the field of Artificial Intelligence,
+					allowing us to train a Machine Learning model for almost any type of problem using any type of data.
+					Federated Learning (FL) is a type of distributed Deep Learning framework in which the model is
+					trained locally on each device, and only the trained gradients, also known as “local updates”, are
+					sent to a central server that aggregates them and creates a global model.
 				</p>
 				<a href="#">
 					Learn More
