--- a/index.html
+++ b/index.html
@@ -892,11 +892,7 @@
 					control, driving comfort, and safety. These ECUs communicate using the Controller Area Network (CAN)
 					protocol, which despite its widespread adoption, is vulnerable to various security threats.
 					Therefore making CAN protocol more secure is crucial, intrusion detection systems (IDS) offer a
-					viable path to mitigating cyberattacks on vehicles. This research proposes a Hybrid Framework for
-					performance analysis of Machine Learning-based IDS employing a range of models, including K-Nearest
-					Neighbor (KNN), Logistic Regression, Decision Tree (DT), Random Forest, XGBoost, CatBoost,
-					Multi-Layer Perceptron (MLP), Long Short-Term Memory (LSTM), and Bidirectional Encoder
-					Representations from Transformers (BERT).
+					viable path to mitigating cyberattacks on vehicles.
 				</p>
 				<a href="https://scholar.uwindsor.ca/etd/9382/">
 					Learn More
