--- a/index.html
+++ b/index.html
@@ -254,6 +254,22 @@
 			text-decoration: none;
 			font-size: 1.5em;
 		}
+
+		a.learn-more-button {
+			display: inline-block;
+			padding: 10px 20px;
+			font-size: 16px;
+			color: white;
+			background-color: #007BFF;
+			border: none;
+			border-radius: 5px;
+			text-decoration: none;
+			text-align: center;
+		}
+
+		a.learn-more-button:hover {
+			background-color: #0056b3;
+		}
 	</style>
 </head>
 
@@ -307,7 +323,7 @@
 						Networks (GNNs) to address racial bias in language understanding. Our approach shows how GNNs
 						can be used to mitigate bias and fairly represent minority groups in NLP tasks.
 					</p>
-					<a href="https://github.com/cybercat37794/Debias-Racial-Bias-Using-GNN">
+					<a href="https://github.com/cybercat37794/Debias-Racial-Bias-Using-GNN" class="learn-more-button">
 						Learn More
 					</a>
 				</div>
