--- a/index.html
+++ b/index.html
@@ -341,8 +341,8 @@
 						allowance, overcharge conditions, and plan benefits. This initiative integrates concepts learned
 						in class to develop a practical, real-world application.
 					</p>
-					<a
-						href="https://www.figma.com/proto/maT7zgbHPxJhOeyXKH2VcL/ACC---Group-7---Presentation?page-id=0%3A1&node-id=1-4&node-type=canvas&viewport=195%2C302%2C0.15&t=nllAR5JW9AxKGENO-1&scaling=contain&content-scaling=fixed">
+					<a href="https://www.figma.com/proto/maT7zgbHPxJhOeyXKH2VcL/ACC---Group-7---Presentation?page-id=0%3A1&node-id=1-4&node-type=canvas&viewport=195%2C302%2C0.15&t=nllAR5JW9AxKGENO-1&scaling=contain&content-scaling=fixed"
+						class="learn-more-button">
 						Learn More
 					</a>
 				</div>
@@ -374,7 +374,7 @@
 						identify patterns. This research compares traditional technical analysis models (SMA and EMA)
 						with deep learning (LSTM) for predicting stock closing prices.
 					</p>
-					<a href="https://github.com/cybercat37794/Stock-Price-Prediction">
+					<a href="https://github.com/cybercat37794/Stock-Price-Prediction" class="learn-more-button">
 						Learn More
 					</a>
 				</div>
