button allignment fixed

--- a/index.html
+++ b/index.html
@@ -255,40 +255,20 @@
 			font-size: 1.5em;
 		}
 
-		.item {
-			display: flex;
-			flex-direction: column;
-			justify-content: space-between;
-			height: 100%;
-		}
-
-		.item img {
-			align-self: center;
-		}
-
-		.item h3 {
-			margin-top: 10px;
-		}
-
-		.item p {
-			flex-grow: 1;
-		}
-
-		.learn-more-button {
+		a.learn-more-button {
 			display: inline-block;
 			padding: 10px 20px;
 			font-size: 16px;
 			color: white;
-			background-color: #007BFF;
+			background-color: #a9b9cb;
 			border: none;
 			border-radius: 5px;
 			text-decoration: none;
 			text-align: center;
-			margin-top: 10px;
 		}
 
-		.learn-more-button:hover {
-			background-color: #0056b3;
+		a.learn-more-button:hover {
+			background-color: #a9b9cb;
 		}
 	</style>
 </head>
