add class to "Learn More" button for improved styling

--- a/index.html
+++ b/index.html
@@ -391,8 +391,8 @@
 						network is also constructed to classify the images. An Alexnet approach (mean value subtraction)
 						was used to normalize the raw images.
 					</p>
-					<a
-						href="https://github.com/cybercat37794/DeepLearning-projects/tree/main/Bangla%20Digit%20Classification%20Final%20Project">
+					<a href="https://github.com/cybercat37794/DeepLearning-projects/tree/main/Bangla%20Digit%20Classification%20Final%20Project"
+						class="learn-more-button">
 						Learn More
 					</a>
 				</div>
