add class to "Learn More" links for improved styling

--- a/index.html
+++ b/index.html
@@ -411,7 +411,7 @@
 						to communicate with friend using internet. Users have to register and obtain credentials to
 						login into the application.
 					</p>
-					<a href="https://github.com/cybercat37794/TalkBuzz">
+					<a href="https://github.com/cybercat37794/TalkBuzz" class="learn-more-button">
 						Learn More
 					</a>
 				</div>
@@ -428,7 +428,8 @@
 						donor data. It also offers login functionality and a splash screen animation. The project uses
 						SQL Server Management Studio and Visual Studio.
 					</p>
-					<a href="https://github.com/cybercat37794/C-sharp-project/tree/main/BloodBankManagementSystem">
+					<a href="https://github.com/cybercat37794/C-sharp-project/tree/main/BloodBankManagementSystem"
+						class="learn-more-button">
 						Learn More
 					</a>
 				</div>
@@ -789,8 +790,8 @@
 					traditional models to the latest advancements. We discussed their strengths and limitations, the
 					data they use, and how to measure their performance.
 				</p>
-				<a
-					href="https://www.uwindsor.ca/science/computerscience/304056/technical-workshop-series-unlocking-power-recommender-systems-hands-journey-python-2nd">
+				<a href="https://www.uwindsor.ca/science/computerscience/304056/technical-workshop-series-unlocking-power-recommender-systems-hands-journey-python-2nd"
+					class="learn-more-button">
 					Learn More
 				</a>
 			</div>
@@ -806,8 +807,8 @@
 					t-SNE, PCA, and Isomap, as well as their implementations. We will explore the consensus matrix and
 					how to adjust the best clustering parameters.
 				</p>
-				<a
-					href="https://www.uwindsor.ca/science/computerscience/248659/technical-workshop-series-advanced-topics-data-clustering-ali-abbasi-tadi">
+				<a href="https://www.uwindsor.ca/science/computerscience/248659/technical-workshop-series-advanced-topics-data-clustering-ali-abbasi-tadi"
+					class="learn-more-button">
 					Learn More
 				</a>
 			</div>
@@ -822,8 +823,8 @@
 					security, and the practical applications of cloud technologies in enhancing efficiency and
 					reliability in IoT ecosystems.
 				</p>
-				<a
-					href="https://www.uwindsor.ca/science/computerscience/328114/technical-workshop-basic-topics-cloud-computing-iot-1st-offering-atefeh-gilvari">
+				<a href="https://www.uwindsor.ca/science/computerscience/328114/technical-workshop-basic-topics-cloud-computing-iot-1st-offering-atefeh-gilvari"
+					class="learn-more-button">
 					Learn More
 				</a>
 			</div>
@@ -837,8 +838,8 @@
 					the environment instead of transition probabilities. This workshop will introduce the principle of
 					Q-learning.
 				</p>
-				<a
-					href="https://www.uwindsor.ca/science/computerscience/326549/technical-workshop-foundations-q-learning-1st-offering-xiaofeng-michael-liu">
+				<a href="https://www.uwindsor.ca/science/computerscience/326549/technical-workshop-foundations-q-learning-1st-offering-xiaofeng-michael-liu"
+					class="learn-more-button">
 					Learn More
 				</a>
 			</div>
@@ -856,8 +857,8 @@
 					the workshop will delve into recent advancements and prospects, empowering participants to unlock
 					the full capabilities of DRL and its transformative impact on the technological landscape.
 				</p>
-				<a
-					href="https://www.uwindsor.ca/science/computerscience/331062/unveiling-potential-deep-reinforcement-learning-drl-methods-and-applications-1st-offering">
+				<a href="https://www.uwindsor.ca/science/computerscience/331062/unveiling-potential-deep-reinforcement-learning-drl-methods-and-applications-1st-offering"
+					class="learn-more-button">
 					Learn More
 				</a>
 			</div>
@@ -870,8 +871,8 @@
 					comprehensive ecosystem and the role it plays in the Al and ML landscape. We will cover essential
 					components, the machine learning workflow, and the tools available for efficient model development.
 				</p>
-				<a
-					href="https://www.uwindsor.ca/science/computerscience/332885/technical-workshop-azure-machine-learning-2nd-offering-mahshad-hashemi">
+				<a href="https://www.uwindsor.ca/science/computerscience/332885/technical-workshop-azure-machine-learning-2nd-offering-mahshad-hashemi"
+					class="learn-more-button">
 					Learn More
 				</a>
 			</div>
@@ -885,8 +886,8 @@
 					workshop will cover the basics of NLP, its applications, and popular techniques, including text
 					classification, sentiment analysis, named entity recognition, and machine translation.
 				</p>
-				<a
-					href="https://www.uwindsor.ca/science/computerscience/326072/technical-workshop-introduction-natural-language-processing-nlp-2nd-offering-soroush">
+				<a href="https://www.uwindsor.ca/science/computerscience/326072/technical-workshop-introduction-natural-language-processing-nlp-2nd-offering-soroush"
+					class="learn-more-button">
 					Learn More
 				</a>
 			</div>
@@ -904,8 +905,8 @@
 					the unique contributions of its many ethnic groups-from the Persian and Azeri to the Kurdish and
 					Baluchi-each adding a distinct flavour to Iran's cultural mosaic.
 				</p>
-				<a
-					href="https://www.uwindsor.ca/science/computerscience/333457/technical-workshop-iran-journey-through-culture-and-tradition-2nd-offering-nasrin-tavakoli">
+				<a href="https://www.uwindsor.ca/science/computerscience/333457/technical-workshop-iran-journey-through-culture-and-tradition-2nd-offering-nasrin-tavakoli"
+					class="learn-more-button">
 					Learn More
 				</a>
 			</div>
@@ -921,7 +922,7 @@
 					Therefore making CAN protocol more secure is crucial, intrusion detection systems (IDS) offer a
 					viable path to mitigating cyberattacks on vehicles.
 				</p>
-				<a href="https://scholar.uwindsor.ca/etd/9382/">
+				<a href="https://scholar.uwindsor.ca/etd/9382/" class="learn-more-button">
 					Learn More
 				</a>
 			</div>
@@ -937,7 +938,7 @@
 					trained locally on each device, and only the trained gradients, also known as “local updates”, are
 					sent to a central server that aggregates them and creates a global model.
 				</p>
-				<a href="#">
+				<a href="#" class="learn-more-button">
 					Learn More
 				</a>
 			</div>
@@ -962,12 +963,12 @@
 					Our project, PickaPlan, was showcased at the 11th CS Demo Day hosted by the School of Computer
 					Science at the University of Windsor.
 				</p>
-				<a
-					href="https://www.linkedin.com/posts/activity-7270640382525239296-46rB?utm_source=share&utm_medium=member_desktop">
+				<a href="https://www.linkedin.com/posts/activity-7270640382525239296-46rB?utm_source=share&utm_medium=member_desktop"
+					class="learn-more-button">
 					Learn More
 				</a>
-				<a
-					href="https://www.linkedin.com/posts/wetechalliance_uwin-compsci-innovation-ugcPost-7270804388674170881-Y147?utm_source=share&utm_medium=member_desktop">
+				<a href="https://www.linkedin.com/posts/wetechalliance_uwin-compsci-innovation-ugcPost-7270804388674170881-Y147?utm_source=share&utm_medium=member_desktop"
+					class="learn-more-button">
 					WETech Alliance
 				</a>
 			</div>
@@ -1012,7 +1013,8 @@
 					Cloud. Also, Docker’s role in packaging applications and Docker Compose’s ability to
 					streamline local development by mimicking cloud environments.
 				</p>
-				<a href="https://docs.google.com/document/d/1eDUlnbRvRkXZ51B0ck9yT3P5jfPLmDmnlrAFHmiey58/edit?tab=t.0">
+				<a href="https://docs.google.com/document/d/1eDUlnbRvRkXZ51B0ck9yT3P5jfPLmDmnlrAFHmiey58/edit?tab=t.0"
+					class="learn-more-button">
 					Learn More
 				</a>
 			</div>
@@ -1034,7 +1036,8 @@
 					Auto-ISAC. The presentation is based on the growing importance of cybersecurity in
 					automotive systems, particularly as vehicles become increasingly connected and automated.
 				</p>
-				<a href="https://docs.google.com/document/d/1eDUlnbRvRkXZ51B0ck9yT3P5jfPLmDmnlrAFHmiey58/edit?tab=t.0">
+				<a href="https://docs.google.com/document/d/1eDUlnbRvRkXZ51B0ck9yT3P5jfPLmDmnlrAFHmiey58/edit?tab=t.0"
+					class="learn-more-button">
 					Learn More
 				</a>
 			</div>
