--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
 			padding: 10px 20px;
 			font-size: 16px;
 			color: white;
-			background-color: #a9b9cb;
+			background-color: #a8c66c;
 			border: none;
 			border-radius: 5px;
 			text-decoration: none;
@@ -268,7 +268,7 @@
 		}
 
 		a.learn-more-button:hover {
-			background-color: #a9b9cb;
+			background-color: #a8c66c;
 		}
 	</style>
 </head>
