add class to dataset DOI link for improved styling

--- a/index.html
+++ b/index.html
@@ -534,7 +534,7 @@
 						white paper by the author then the images are taken using a smartphone camera. After taking the
 						images extra white areas are cropped.
 					</p>
-					<a href="https://doi.org/10.34740/KAGGLE/DSV/4177273">
+					<a href="https://doi.org/10.34740/KAGGLE/DSV/4177273" class="learn-more-button">
 						Dataset Doi
 					</a>
 				</div>
