capital button text

--- a/index.html
+++ b/index.html
@@ -535,7 +535,7 @@
 						images extra white areas are cropped.
 					</p>
 					<a href="https://doi.org/10.34740/KAGGLE/DSV/4177273" class="learn-more-button">
-						Dataset Doi
+						Dataset DOI
 					</a>
 				</div>
 			</div>
