--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
 		</p>
 	</header>
 	<nav>
-		<a href="#">
+		<a href="#portfolio">
 			HOME
 		</a>
 		<a href="#">
@@ -1222,9 +1222,7 @@
 				contribute to exciting advancements in the field.
 			</p>
 			<div class="buttons">
-				<a href="https://www.linkedin.com/in/imran-ahmed-mac-uwindsor/">
-					LinkedIn
-				</a>
+				<a href="https://www.linkedin.com/in/imran-ahmed-mac-uwindsor/">LinkedIn</a>
 			</div>
 		</div>
 	</section>
