--- a/index.html
+++ b/index.html
@@ -288,19 +288,19 @@
 		</p>
 	</header>
 	<nav>
-		<a href="#portfolio">
+		<a href="#">
 			HOME
 		</a>
-		<a href="#">
+		<a href="#portfolio">
 			PORTFOLIO
 		</a>
-		<a href="#">
+		<a href="#academics_n_career">
 			ACADEMICS
 		</a>
-		<a href="#">
+		<a href="#about-section">
 			ABOUT
 		</a>
-		<a href="#">
+		<a href="#contact">
 			CONTACT
 		</a>
 	</nav>
