--- a/index.html
+++ b/index.html
@@ -54,6 +54,17 @@
 			background-color: #333;
 		}
 
+		nav ul {
+			list-style-type: none;
+			padding: 0;
+			margin: 0;
+		}
+
+		nav ul li {
+			display: inline;
+			margin-right: 20px;
+		}
+
 		nav a {
 			color: #fff;
 			margin: 0 15px;
@@ -292,21 +303,31 @@
 		</p>
 	</header>
 	<nav>
-		<a href="#">
-			HOME
-		</a>
-		<a href="#portfolio">
-			PORTFOLIO
-		</a>
-		<a href="#academics_n_career">
-			ACADEMICS
-		</a>
-		<a href="#about-section">
-			ABOUT
-		</a>
-		<a href="#contact">
-			CONTACT
-		</a>
+		<li>
+			<a href="#">
+				HOME
+			</a>
+		</li>
+		<li>
+			<a href="#portfolio">
+				PORTFOLIO
+			</a>
+		</li>
+		<li>
+			<a href="#academics_n_career">
+				ACADEMICS
+			</a>
+		</li>
+		<li>
+			<a href="#about-section">
+				ABOUT
+			</a>
+		</li>
+		<li>
+			<a href="#contact">
+				CONTACT
+			</a>
+		</li>
 	</nav>
 	<section class="portfolio">
 		<h2>
