--- a/index.html
+++ b/index.html
@@ -296,10 +296,25 @@
 			HOME
 		</a>
 		<a href="#portfolio">
-			PORTFOLIO
+			PROJECTS
+		</a>
+		<a href="#portfolio">
+			REPORTS & PUBLICATIONS
 		</a>
 		<a href="#academics_n_career">
-			ACADEMICS
+			ACADEMICS & CAREER HISTORY
+		</a>
+		<a href="#portfolio">
+			COURSE & CERTIFICATION
+		</a>
+		<a href="#portfolio">
+			WORKSHOPS
+		</a>
+		<a href="#portfolio">
+			EVENTS
+		</a>
+		<a href="#portfolio">
+			SKILLS
 		</a>
 		<a href="#about-section">
 			ABOUT
